prepare public backend API for Flutter (#19)
Co-authored-by: Alexandr <ale906206@yzndex.ru>